--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Yubeats</title>
     <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
