--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Yubeats</title>
     <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
