--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="tophalf">
+    <img id="pic" src="images/IMG_20230708_201243.jpg">
+    <h1 id="header">Yubeats</h1>
+</div>
 <p1>yo</p1>
 </body>
 </html>
