--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="tophalf">
-    <img id="pic" src="images/IMG_20230708_201243.jpg">
-    <h1 id="header">Yubeats</h1>
+  <h1 id="Yubeats">Yubeats</h1>
+  <div class="content">
+    <nav>
+      <ul>
+        <li><a href="">home</a></li>
+        <li><a href="">about</a></li>
+        <li><a href="">music</a></li>
+      </ul>
+    </nav>
   </div>
-<p1>yo</p1>
 </body>
 </html>
