add iframes and about

--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
       </ul>
     </nav>
     <p>
-      this is my about
+      Yubeats is a low-profile artist in quest of peace.<br>
+      genre: Hip-hop/ Boombap/ Lo-fi beats
     </p>
     
   </div>
