--- a/music.html
+++ b/music.html
@@ -16,10 +16,10 @@
         <li><a href="music.html">music</a></li>
       </ul>
     </nav>
-    <p>
-      this is my music
-    </p>
-    
+  <h1></h1>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1chExlHh8WuKih0PzWCAtI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <h1></h1>
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1795859418&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/12yubeats" title="Yubeats" target="_blank" style="color: #cccccc; text-decoration: none;">Yubeats</a> · <a href="https://soundcloud.com/12yubeats/sets/yubeats" title="Yubeats on Soundcloud" target="_blank" style="color: #cccccc; text-decoration: none;">Yubeats on Soundcloud</a></div>
   </div>
 </body>
 </html>
