add home links and about page image

--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
         <li><a href="music.html">music</a></li>
       </ul>
     </nav>
-    <p>
-      this is my home
-    </p>
-    
+    <div class="texts">
+      <p>
+        check out my music here:<br><br>
+        <a href="https://open.spotify.com/artist/1chExlHh8WuKih0PzWCAtI?si=5Xwz5ZwrSFmRJ4pTQZ5KUA" target="_blank">
+        <i class="fa-brands fa-spotify fa-2xl"></i></a>
+
+        <a href="https://on.soundcloud.com/cj6mf82CD7hjEtUr6" target="_blank">
+        <i class="fa-brands fa-soundcloud fa-2xl"></i></a>
+
+        <a href="https://youtube.com/@wy40746?si=8s9YjlfeI5Wh9--O" target="_blank"> 
+        <i class="fa-brands fa-youtube fa-2xl"></i></a>
+
+        <a href="https://music.apple.com/us/artist/yubeats/1721456147" target="_blank">
+        <i class="fa-brands fa-itunes fa-2xl"></i></a>
+      </p>
+    </div>
   </div>
+  <script src="https://kit.fontawesome.com/e16ca34bfc.js" crossorigin="anonymous"></script>
 </body>
 </html>
