--- a/about.html
+++ b/about.html
@@ -16,10 +16,13 @@
         <li><a href="music.html">music</a></li>
       </ul>
     </nav>
-    <p>
-      Yubeats is a low-profile artist in quest of peace.<br>
-      genre: Hip-hop/ Boombap/ Lo-fi beats
-    </p>
+    <div class="texts">
+      <img src="images/Yu_Avatar_compressed.png">
+      <p>
+        Yubeats is a low-profile artist in quest of peace,<br>
+        making Hip-hop/ Boombap/ Lo-fi beats
+      </p>
+    </div>
     
   </div>
 </body>
