add js file and try function

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div class="content">
     <nav>   
       <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about</a></li>
-        <li><a href="music.html">music</a></li>
+        <li><a id="hm" class="none" onclick="changeHome()" href="index.html">home</a></li>
+        <li><a id="ab" class="none" onclick="changeAbout()" href="about.html">about</a></li>
+        <li><a id="ms" class="none" onclick="changeMusic()" href="music.html">music</a></li>
       </ul>
     </nav>
     <div class="texts">
@@ -34,5 +34,6 @@
     </div>
   </div>
   <script src="https://kit.fontawesome.com/e16ca34bfc.js" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
