--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav>   
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about</a></li>
+        <li><a id="active" href="about.html">about</a></li>
         <li><a href="music.html">music</a></li>
       </ul>
     </nav>
