--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div class="content">
     <nav>   
       <ul>
-        <li><a id="hm" class="none" onclick="changeHome()" href="index.html">home</a></li>
-        <li><a id="ab" class="none" onclick="changeAbout()" href="about.html">about</a></li>
-        <li><a id="ms" class="none" onclick="changeMusic()" href="music.html">music</a></li>
+        <li><a id="active" href="index.html">home</a></li>
+        <li><a href="about.html">about</a></li>
+        <li><a href="music.html">music</a></li>
       </ul>
     </nav>
     <div class="texts">
