--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="music.html">music</a></li>
+        <li><a id="active" href="music.html">music</a></li>
       </ul>
     </nav>
   <h1></h1>
