--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="app.js"></script>  
 </head>
 <body>
   <h1 id="Yubeats">Yubeats</h1>
@@ -12,18 +13,19 @@
     <nav>   
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a id="active" href="about.html">about</a></li>
+        <li><a href="about.html">about</a></li>
         <li><a href="music.html">music</a></li>
       </ul>
     </nav>
-    <div class="texts">
-      <img src="images/Yu_Avatar_compressed.png">
-      <p>
-        Yubeats is a low-profile artist in quest of peace,<br>
-        making Hip-hop/ Boombap/ Lo-fi beats
-      </p>
-    </div>
-    
+    <main id="swup" class="transition-fade">
+      <div class="texts">
+        <img src="images/Yu_Avatar_compressed.png">
+        <p>
+          Yubeats is a low-profile artist in quest of peace,<br>
+          making Hip-hop/ Boombap/ Lo-fi beats
+        </p>
+      </div>
+    </main>
   </div>
 </body>
 </html>
