--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
   <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="app.js"></script>  
 </head>
 <body>
   <h1 id="Yubeats">Yubeats</h1>
   <div class="content">
     <nav>   
       <ul>
-        <li><a id="active" href="index.html">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="about.html">about</a></li>
         <li><a href="music.html">music</a></li>
       </ul>
     </nav>
-    <div class="texts">
-      <p>
-        check out my music here:<br><br>
-        <a href="https://open.spotify.com/artist/1chExlHh8WuKih0PzWCAtI?si=5Xwz5ZwrSFmRJ4pTQZ5KUA" target="_blank">
-        <i class="fa-brands fa-spotify fa-2xl"></i></a>
+    <main id="swup" class="transition-fade">
+      <div class="texts">
+        <p>
+          check out my music here:<br><br>
+          <a href="https://open.spotify.com/artist/1chExlHh8WuKih0PzWCAtI?si=5Xwz5ZwrSFmRJ4pTQZ5KUA" target="_blank">
+          <i class="fa-brands fa-spotify fa-2xl"></i></a>
 
-        <a href="https://on.soundcloud.com/cj6mf82CD7hjEtUr6" target="_blank">
-        <i class="fa-brands fa-soundcloud fa-2xl"></i></a>
+          <a href="https://on.soundcloud.com/cj6mf82CD7hjEtUr6" target="_blank">
+          <i class="fa-brands fa-soundcloud fa-2xl"></i></a>
 
-        <a href="https://youtube.com/@wy40746?si=8s9YjlfeI5Wh9--O" target="_blank"> 
-        <i class="fa-brands fa-youtube fa-2xl"></i></a>
+          <a href="https://youtube.com/@wy40746?si=8s9YjlfeI5Wh9--O" target="_blank"> 
+          <i class="fa-brands fa-youtube fa-2xl"></i></a>
 
-        <a href="https://music.apple.com/us/artist/yubeats/1721456147" target="_blank">
-        <i class="fa-brands fa-itunes fa-2xl"></i></a>
-      </p>
-    </div>
+          <a href="https://music.apple.com/us/artist/yubeats/1721456147" target="_blank">
+          <i class="fa-brands fa-itunes fa-2xl"></i></a>
+        </p>
+      </div>
+    </main>
   </div>
   <script src="https://kit.fontawesome.com/e16ca34bfc.js" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
 </body>
 </html>
