--- a/music.html
+++ b/music.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="app.js"></script>  
 </head>
 <body>
   <h1 id="Yubeats">Yubeats</h1>
@@ -13,13 +14,15 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a id="active" href="music.html">music</a></li>
+        <li><a href="music.html">music</a></li>
       </ul>
     </nav>
-  <h1></h1>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1chExlHh8WuKih0PzWCAtI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-  <h1></h1>
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1795859418&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/12yubeats" title="Yubeats" target="_blank" style="color: #cccccc; text-decoration: none;">Yubeats</a> · <a href="https://soundcloud.com/12yubeats/sets/yubeats" title="Yubeats on Soundcloud" target="_blank" style="color: #cccccc; text-decoration: none;">Yubeats on Soundcloud</a></div>
+    <main id="swup" class="transition-fade">
+      <h1></h1>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1chExlHh8WuKih0PzWCAtI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <h1></h1>
+        <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1795859418&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/12yubeats" title="Yubeats" target="_blank" style="color: #cccccc; text-decoration: none;">Yubeats</a> · <a href="https://soundcloud.com/12yubeats/sets/yubeats" title="Yubeats on Soundcloud" target="_blank" style="color: #cccccc; text-decoration: none;">Yubeats on Soundcloud</a></div>
+    </main>
   </div>
 </body>
 </html>
