--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Yubeats</title>
-  <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
+  <title>Forestia Acoustic</title>
+  <link rel="icon" type="image/x-icon" href="images/IMG_20230708_201243.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script type="module" src="app.js"></script>  
 </head>
 <body>
-  <h1 id="Yubeats">Yubeats</h1>
+  <h1 id="ForestiaAcoustic">Forestia Acoustic</h1>
   <div class="content">
     <nav>   
       <ul>
@@ -19,9 +19,8 @@
     </nav>
     <main id="swup" class="transition-fade">
       <div class="texts">
-        <img src="images/Yu_Avatar_compressed.png">
         <p>
-          Yubeats is a low-profile artist in quest of peace,<br>
+          Forestia Acoustic is a low-profile artist in quest of peace,<br>
           making Hip-hop/ Boombap/ Lo-fi beats
         </p>
       </div>
