--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Yubeats</title>
-  <link rel="icon" type="image/x-icon" href="images/Yu_Avatar_compressed.ico">
+  <title>Forestia Acoustic</title>
+  <link rel="icon" type="image/x-icon" href="images/IMG_20230708_201243.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script type="module" src="app.js"></script>  
 </head>
 <body>
-  <h1 id="Yubeats">Yubeats</h1>
+  <h1 id="ForestiaAcoustic">Forestia Acoustic</h1>
   <div class="content">
     <nav>   
       <ul>
