--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forestia Acoustic</title>
+  <title>evrgrn.</title>
   <link rel="icon" type="image/x-icon" href="images/IMG_20230708_201243.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script type="module" src="app.js"></script>  
 </head>
 <body>
-  <h1 id="ForestiaAcoustic">Forestia Acoustic</h1>
+  <h1 id="ForestiaAcoustic">evrgrn.</h1>
   <div class="content">
     <nav>   
       <ul>
@@ -20,7 +20,7 @@
     <main id="swup" class="transition-fade">
       <div class="texts">
         <p>
-          Forestia Acoustic is a low-profile artist in quest of peace,<br>
+          evrgrn. is a low-profile artist in quest of peace,<br>
           making Hip-hop/ Boombap/ Lo-fi beats
         </p>
       </div>
